реализация вывода товаров по категориям

--- a/frontend/src/styles/previewCard.module.scss
+++ b/frontend/src/styles/previewCard.module.scss
@@ -49,10 +49,9 @@
 
 
     &__img {
-        margin: 0 83px;
-
-        width: 177px;
-        height: 237px;
+        margin: 5px 0 0 60px;
+        width: 224px;
+        height: 232px;
         object-fit: cover;
     }
 
