--- a/frontend/src/styles/categorySlider.module.scss
+++ b/frontend/src/styles/categorySlider.module.scss
@@ -1,38 +1,6 @@
 .category {
     margin: 45px auto 0 auto;
     max-width: 1141px;
-
-    &__slider {
-        position: relative;
-
-        &__button {
-            position: absolute;
-
-            top: 253px;
-            left: 1099px;
-
-            width: 66px;
-            height: 66px;
-
-            background-color: #EBEBEB;
-            border: 1px solid #EBEBEB;
-            border-radius: 50px;
-            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-
-            background-image: url("../image/icons/arrow_slider.svg");
-            background-size: 13px 20px;
-            background-repeat: no-repeat;
-            background-position: center;
-
-            transition: .5s;
-
-            &:hover {
-                cursor: pointer;
-                transform: scale(1.2);
-            }
-        }
-    }
-
 }
 
 .cards {
@@ -41,8 +9,7 @@
     justify-content: space-between;
 
     padding: 0;
-    margin: 0;
-    margin-bottom: 46px;
+    margin: 0 0 46px 0;
 
     width: 1140px;
 }
