--- a/frontend/src/styles/header.module.scss
+++ b/frontend/src/styles/header.module.scss
@@ -17,7 +17,7 @@
 
         &__img {
             width: 198px;
-            height: 72px; 
+            height: 72px;
         }
     }
 
@@ -85,12 +85,22 @@
 
     &__menu_icon {
         padding: 0;
-        margin: 0;
-
-        margin-right: 22px;
+        margin: 0 22px 0 0;
+        width: 32px;
+        height: 32px;
+        display: flex;
 
         &:last-child{
             margin-right: 0;
+        }
+
+        &__text {
+            font-family: 'Roboto', sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 20px;
+
+            color: #000000;
         }
 
         &__img {
@@ -100,6 +110,25 @@
 
             &:hover {
                 cursor: pointer;
+            }
+
+            &__account {
+                background-image: url("../image/icons/profile.svg");
+                background-size: cover;
+                background-position: center;
+
+                width: 32px;
+                height: 32px;
+
+                &__active {
+                    background-image: url("../image/icons/profile__active.svg");
+                    background-size: cover;
+                    background-position: center;
+
+                    width: 32px;
+                    height: 32px;
+
+                }
             }
         }
     }
