--- a/frontend/src/styles/categoryCards.module.scss
+++ b/frontend/src/styles/categoryCards.module.scss
@@ -10,9 +10,17 @@
     grid-row-gap: 46px;
 
     padding: 0;
-    margin: 0 0 46px 0;
+    margin: 25px 0 46px 0;
 
     width: 1140px;
     flex-wrap: wrap;
   }
 }
+
+.selectors {
+  display: flex;
+  flex-direction: row;
+  column-gap: 46px;
+  flex-wrap: wrap;
+}
+
