--- a/frontend/src/styles/profile.module.scss
+++ b/frontend/src/styles/profile.module.scss
@@ -110,8 +110,20 @@
     }
 
     &__container {
-      padding: 0;
+      padding: 0 0 30px 0;
       margin: 0;
+
+      &__nothing {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 28px;
+
+        padding: 15px 0 0 45px;
+        margin: 0;
+
+        color: #b2b2b2;
+      }
     }
 
     &__button {
@@ -166,6 +178,10 @@
 
         margin: 0;
         padding: 0;
+
+        &__end {
+          color: #000000;
+        }
       }
 
       &__addition {
@@ -187,11 +203,17 @@
           font-style: normal;
           font-weight: 500;
           font-size: 22px;
+          width: 130px;
+          text-align: end;
 
           color: #3255B4;
 
           margin: 0;
           padding: 0;
+
+          &__end {
+            color: #000000;
+          }
         }
       }
     }
