--- a/frontend/admin/src/styles/aside.module.sass
+++ b/frontend/admin/src/styles/aside.module.sass
@@ -12,7 +12,7 @@
     &__text
       font-style: normal
       font-weight: 300
-      font-size: 16px
+      font-size: 14px
       color: #fdfbfb
 
       margin: 0
@@ -20,12 +20,13 @@
 
       &__name
         font-weight: 600
-        font-size: 48px
+        font-size: 25px
+        padding-bottom: 6px
 
 
     &__container
       background-color: rgba(227, 158, 91, .2)
-      margin: 50px auto 0
+      margin: 67px auto 0
       border-radius: 20px
       width: 75%
 
@@ -35,7 +36,7 @@
 
   &__separator
     border: 1px solid rgba(246, 203, 162, 0.93)
-    margin: 60px auto 0
+    margin: 67px auto 0
 
   &__nav
     flex-wrap: wrap
