--- a/frontend/admin/src/styles/staff.module.sass
+++ b/frontend/admin/src/styles/staff.module.sass
@@ -55,7 +55,8 @@
   &__container
     margin-top: 40px
     height: 555px
-    overflow: scroll
+    overflow-x: hidden
+    overflow-y: scroll
 
   &__tr
     &:nth-child(2n)
